<resources>
    <string name="app_name">Service at Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_theme_title">Select Theme</string>
    <string name="select_theme_des">Select a theme for styling this App</string>
    <string name="theme_white">White</string>
    <string name="theme_black">Black</string>
    <string name="start">Start</string>
    <string name="login">Login</string>
    <string name="txt_hint_pass">Password</string>
    <string name="txt_hint_user">Username</string>
    <string name="registration">Registration</string>
    <string name="linkBusiness">Link Your Business</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_hint_first_name">First Name</string>
    <string name="txt_hint_last_name">Last Name</string>
    <string name="txt_hint_phone">Phone no.</string>
    <string name="txt_hint_email">Email</string>
    <string name="txt_hint_con_pass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="txt_hint_business_name">Business Name</string>
    <string name="home">Home</string>
    <string name="account_details">Account Details</string>
    <string name="search_professional">Search professional</string>
    <string name="booking_history">Booking history</string>
    <string name="calendar_events">Calendar Events</string>
    <string name="change_pass">Change password</string>
    <string name="logout">Logout</string>
    <string name="services">Services</string>
    <string name="title_activity_business_details">BusinessDetailsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="process">Process</string>
    <string name="personal_details">Personal Details</string>
    <string name="address_details">Address Details</string>
    <string name="txt_hint_pincode">Enter Pincode</string>
    <string name="lookup">Look Up</string>
    <string name="current_location">Current Location</string>
    <string name="use_current_location">Use current location</string>
    <string name="or">Or</string>
    <string name="current_address">Current address</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="search_details">Search Details</string>
    <string name="availability">Availability</string>
    <string name="gallery">Gallery</string>
    <string name="about_Me">About Me</string>
    <string name="date">Choose Date</string>
    <string name="select_service">Select service</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="search">Search</string>
    <string name="current_pass">Enter current password</string>
    <string name="new_pass">Enter new password</string>
    <string name="re_new_pass">Confirm new password</string>
    <string name="no">No</string>
    <string name="title_activity_professional_home">ProfessionalHomeActivity</string>
    <string name="professional_details">Professional details</string>
    <string name="working_day">Working Day</string>
    <string name="txt_hint_address_one">Address line 1</string>
    <string name="txt_hint_address_two">Address line 2</string>
    <string name="txt_hint_address_three">Address line 3</string>
    <string name="txt_hint_city">City</string>
    <string name="txt_hint_state">State</string>
    <string name="add_new_service">Add new service</string>
    <string name="duration">Duration in minutes</string>
    <string name="price">Price</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="personal_work_details">Work Details</string>
    <string name="txt_hint_what_are_you">What are you</string>
    <string name="txt_hint_about_service">About your service</string>
    <string name="txt_hint_speciality">Speciality</string>
    <string name="txt_hint_speciality_exa">ex: Weekends</string>
    <string name="txt_hint_account_name">Account name</string>
    <string name="txt_hint_account_no">Account Number</string>
    <string name="txt_hint_sort_type">Sort type</string>
    <string name="txt_hint_sort_code">Sort code</string>
    <string name="txt_hint_paypal_account">Paypal Account</string>
    <string name="upload">Upload</string>
    <string name="err_username">Please enter username.</string>
    <string name="err_password">Please enter password.</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="err_fname">Please enter first name.</string>
    <string name="err_lname">Please enter last name.</string>
    <string name="err_phone">Please enter valid phone number.</string>
    <string name="err_email">Please enter email.</string>
    <string name="err_cpass">Please enter Confirm password.</string>
    <string name="err_pass_not_matched">Confirm password not matched.</string>
    <string name="success_reg">Registration success.</string>
    <string name="err_busi_name">Please enter business name.</string>
    <string name="Professions">PROFESSIONS</string>
    <string name="about_service">ABOUT SERVICE</string>
    <string name="speciality">SPECIALITY</string>
    <string name="home_category">Category</string>
    <string name="search_service">Search service</string>
    <string name="txt_pincode">Pincode</string>
</resources>
