<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account_details"
            android:icon="@drawable/ic_account"
            android:title="@string/account_details" />
        <item
            android:id="@+id/nav_professional_details"
            android:icon="@drawable/ic_business"
            android:title="@string/professional_details" />
        <item
            android:id="@+id/nav_about_me"
            android:icon="@drawable/ic_user"
            android:title="@string/about_Me" />
        <item
            android:id="@+id/nav_calendar_events"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar_events" />
        <item
            android:id="@+id/nav_calendar_working_day"
            android:icon="@drawable/ic_work"
            android:title="@string/working_day" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_change_pass"
                android:icon="@drawable/ic_lock_black"
                android:title="@string/change_pass" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
