<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true"
    android:background="@color/bodyColorWhite"
    tools:context=".activities.user.SearchProfessionalActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <android.support.v7.widget.CardView
            android:id="@+id/cd_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bodyColorDark"
                android:padding="10dp"
                android:text="@string/search_details"
                android:textAlignment="center"
                android:textColor="@color/textColorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:textSize="18sp"
                    android:text="@string/availability"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="24/08/2019"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@drawable/layout_border_theme"
                    android:text="@string/date"
                    android:paddingLeft="10dp"
                    android:textColor="@color/whiteWhite"
                    android:drawableLeft="@drawable/ic_date"
                    />

                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_service"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_pincode"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="0.4"
                    android:background="@drawable/button_bg_theme"
                    android:text="@string/search"
                    android:drawablePadding="10dp"
                    android:paddingLeft="30dp"
                    android:paddingEnd="50dp"
                    android:textColor="@color/whiteWhite"
                    android:drawableLeft="@drawable/ic_search"
                    android:layout_marginBottom="10dp"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_search_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="false"
            android:layout_below="@+id/cd_search"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scrollbars="vertical" />

    </RelativeLayout>

</ScrollView>