<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_demo_a">
    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#50000000"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_go_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/linkBusiness"
            android:textColor="@color/whiteWhite"
            android:textSize="22sp" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >



            <EditText
                android:id="@+id/edt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/layout_border_white"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/txt_hint_first_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/whiteWhite"
                android:textColorHint="@color/whiteWhite" />

            <EditText
                android:id="@+id/edt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/layout_border_white"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/txt_hint_last_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/whiteWhite"
                android:textColorHint="@color/whiteWhite" />

            <EditText
                android:id="@+id/edt_busi_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/layout_border_white"
                android:drawableLeft="@drawable/ic_business"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/txt_hint_business_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/whiteWhite"
                android:textColorHint="@color/whiteWhite" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/layout_border_white"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/txt_hint_phone"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/whiteWhite"
                android:textColorHint="@color/whiteWhite"/>

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/layout_border_white"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/txt_hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/whiteWhite"
                android:textColorHint="@color/whiteWhite" />

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/layout_border_white"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/txt_hint_pass"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/whiteWhite"
                android:textColorHint="@color/whiteWhite"/>

            <EditText
                android:id="@+id/edt_con_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/layout_border_white"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/txt_hint_con_pass"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/whiteWhite"
                android:textColorHint="@color/whiteWhite" />


            <Button
                android:id="@+id/btn_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/layout_border_theme"
                android:text="@string/register"
                android:textColor="@color/whiteWhite"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>